# ylr

./: Cargo.toml  README.md  foo.tar  main.tar
data/: dates.csv  flights_small.csv  gafa_stock.pq  str.csv
df/: test.arrow  test2.arrow
src/: lib.rs  main.rs  main_delete_write_try.rs  main_full_printing.rs  main_hold.rs  main_read_and_print.rs  main_unpack_tarfile.rs  main_vec_c.rs  main_write_ipc.rs
src/datatypes/: anytype.rs  mod.rs  ylr_dataypes.rs
src/readr/: read_delim.rs
